// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`sorter widget should snapshot on mobile: first mobile render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="perseus-widget-sorter perseus-clearfix"
          >
            <ul
              class="sortable_13d4756 perseus-sortable"
            >
              <li
                class="card_1s6cuhy-o_O-draggable_12to336-o_O-horizontalCard_9um937 perseus-sortable-draggable"
                style="position: static; margin: 0px 8px 0px 0px;"
              >
                <div
                  class="perseus-renderer perseus-renderer-responsive"
                >
                  <div
                    class="paragraph"
                    data-perseus-paragraph-index="0"
                  >
                    <div
                      class="paragraph"
                    >
                      Fourth
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="card_1s6cuhy-o_O-draggable_12to336-o_O-horizontalCard_9um937 perseus-sortable-draggable"
                style="position: static; margin: 0px 8px 0px 0px;"
              >
                <div
                  class="perseus-renderer perseus-renderer-responsive"
                >
                  <div
                    class="paragraph"
                    data-perseus-paragraph-index="0"
                  >
                    <div
                      class="paragraph"
                    >
                      Zeroth
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="card_1s6cuhy-o_O-draggable_12to336-o_O-horizontalCard_9um937 perseus-sortable-draggable"
                style="position: static; margin: 0px 8px 0px 0px;"
              >
                <div
                  class="perseus-renderer perseus-renderer-responsive"
                >
                  <div
                    class="paragraph"
                    data-perseus-paragraph-index="0"
                  >
                    <div
                      class="paragraph"
                    >
                      Second
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="card_1s6cuhy-o_O-draggable_12to336-o_O-horizontalCard_9um937 perseus-sortable-draggable"
                style="position: static; margin: 0px 8px 0px 0px;"
              >
                <div
                  class="perseus-renderer perseus-renderer-responsive"
                >
                  <div
                    class="paragraph"
                    data-perseus-paragraph-index="0"
                  >
                    <div
                      class="paragraph"
                    >
                      First
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="card_1s6cuhy-o_O-draggable_12to336-o_O-horizontalCard_9um937 perseus-sortable-draggable"
                style="position: static; margin: 0px;"
              >
                <div
                  class="perseus-renderer perseus-renderer-responsive"
                >
                  <div
                    class="paragraph"
                    data-perseus-paragraph-index="0"
                  >
                    <div
                      class="paragraph"
                    >
                      Third
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`sorter widget should snapshot: first render 1`] = `
<div>
  <div
    class="perseus-renderer perseus-renderer-responsive"
  >
    <div
      class="paragraph"
      data-perseus-paragraph-index="0"
    >
      <div
        class="paragraph"
      >
        <div
          class="perseus-widget-container widget-nohighlight widget-block"
        >
          <div
            class="perseus-widget-sorter perseus-clearfix"
          >
            <ul
              class="sortable_13d4756 perseus-sortable"
            >
              <li
                class="card_1s6cuhy-o_O-draggable_12to336-o_O-horizontalCard_9um937 perseus-sortable-draggable"
                style="position: static; margin: 0px 5px 0px 0px;"
              >
                <div
                  class="perseus-renderer perseus-renderer-responsive"
                >
                  <div
                    class="paragraph"
                    data-perseus-paragraph-index="0"
                  >
                    <div
                      class="paragraph"
                    >
                      Fourth
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="card_1s6cuhy-o_O-draggable_12to336-o_O-horizontalCard_9um937 perseus-sortable-draggable"
                style="position: static; margin: 0px 5px 0px 0px;"
              >
                <div
                  class="perseus-renderer perseus-renderer-responsive"
                >
                  <div
                    class="paragraph"
                    data-perseus-paragraph-index="0"
                  >
                    <div
                      class="paragraph"
                    >
                      Zeroth
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="card_1s6cuhy-o_O-draggable_12to336-o_O-horizontalCard_9um937 perseus-sortable-draggable"
                style="position: static; margin: 0px 5px 0px 0px;"
              >
                <div
                  class="perseus-renderer perseus-renderer-responsive"
                >
                  <div
                    class="paragraph"
                    data-perseus-paragraph-index="0"
                  >
                    <div
                      class="paragraph"
                    >
                      Second
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="card_1s6cuhy-o_O-draggable_12to336-o_O-horizontalCard_9um937 perseus-sortable-draggable"
                style="position: static; margin: 0px 5px 0px 0px;"
              >
                <div
                  class="perseus-renderer perseus-renderer-responsive"
                >
                  <div
                    class="paragraph"
                    data-perseus-paragraph-index="0"
                  >
                    <div
                      class="paragraph"
                    >
                      First
                    </div>
                  </div>
                </div>
              </li>
              <li
                class="card_1s6cuhy-o_O-draggable_12to336-o_O-horizontalCard_9um937 perseus-sortable-draggable"
                style="position: static; margin: 0px;"
              >
                <div
                  class="perseus-renderer perseus-renderer-responsive"
                >
                  <div
                    class="paragraph"
                    data-perseus-paragraph-index="0"
                  >
                    <div
                      class="paragraph"
                    >
                      Third
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
